# KSegementsCoreSets

./: .gitignore  CMakeLists.txt  KSegmentsCoreSet.h  README.md  test.cpp
LinearRegression/: LinearRegression.cpp  RobustLinearRegression.cpp  RobustLinearRegression.h
