set(CMAKE_CXX_STANDARD 17)
cmake_minimum_required(VERSION 3.16)

project(KSegmentsCoreSet)
find_package(PythonLibs REQUIRED)
include_directories(LinearRegression ${PYTHON_INCLUDE_DIRS} )
add_library(LinearRegression LinearRegression/RobustLinearRegression.cpp LinearRegression/LinearRegression.cpp)
add_executable(test test.cpp)
target_link_libraries(test LinearRegression ${PYTHON_LIBRARIES})
#add_executable(find_action_potential find_action_potential.cpp)
#target_link_libraries(find_action_potential ${PYTHON_LIBRARIES} nlohmann_json::nlohmann_json cnpy csv ${HDF5_HL_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES} ${MOSEK_LIBRARIES} PkgConfig::FFTW)
#add_executable(cartesianTreeMatching cartesianTreeMatching.cpp)
#target_link_libraries(cartesianTreeMatching ${PYTHON_LIBRARIES} nlohmann_json::nlohmann_json cnpy csv ${HDF5_HL_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES} ${MOSEK_LIBRARIES} PkgConfig::FFTW)
#add_executable(cartesianTreeMatchingLines cartesianTreeMatchingLines.cpp)
#target_link_libraries(cartesianTreeMatchingLines ${PYTHON_LIBRARIES} nlohmann_json::nlohmann_json cnpy csv ${HDF5_HL_LIBRARIES} ${HDF5_CXX_LIBRARIES} ${HDF5_LIBRARIES} ${MOSEK_LIBRARIES} PkgConfig::FFTW)
#add_executable(kSegmentsDtw kSegmentsDtw.cpp)
#target_link_libraries(kSegmentsDtw ${PYTHON_LIBRARIES} nlohmann_json::nlohmann_json)